JumpScript/tests/baselines/reference/aliasAssignments.errors.txt
tests/cases/compiler/aliasAssignments_1.jump(3,1): error TS2322: Type '1' is not assignable to type 'typeof "tests/cases/compiler/aliasAssignments_moduleA"'.
tests/cases/compiler/aliasAssignments_1.jump(5,1): error TS2322: Type 'typeof "tests/cases/compiler/aliasAssignments_moduleA"' is not assignable to type 'number'.


==== tests/cases/compiler/aliasAssignments_1.jump (2 errors) ====
    import moduleA = require("./aliasAssignments_moduleA");
    var x = moduleA;
    x = 1; // Should be error
    ~
!!! error TS2322: Type '1' is not assignable to type 'typeof "tests/cases/compiler/aliasAssignments_moduleA"'.
    var y = 1;
    y = moduleA; // should be error
    ~
!!! error TS2322: Type 'typeof "tests/cases/compiler/aliasAssignments_moduleA"' is not assignable to type 'number'.
    
==== tests/cases/compiler/aliasAssignments_moduleA.jump (0 errors) ====
    export class someClass {
        public someData: string;
    }
    